--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     env_file:
       - ../.env
     environment:
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USERNAME:-admin}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
+      POSTGRES_DB: ${DB_NAME:-mainDB}
     ports:
       - '5432:5432'
     volumes:
