--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev:docker": "docker compose -f ./docker/docker-compose.yaml --env-file .env up --build",
-    "stop:dev:docker": "docker compose -f ./docker/docker-compose.yaml down -v",
+    "start:dev:docker": "docker compose -f docker/docker-compose.yaml --env-file ./.env up --build",
+    "stop:dev:docker": "docker compose -f docker/docker-compose.yaml down -v",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
