--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=dev
 PORT=3000
-FRONTEND_DOMAIN = localhost
+FRONTEND_DOMAIN=localhost
 
 # POSTGRES
 
@@ -32,5 +32,5 @@ TEST_REDIS_PORT=6379
 
 # AUTH
 
-AUTH_SESSION_TTL_SEC= 3600
-AUTH_SESSION_COOKIE_NAME = authSession
+AUTH_SESSION_TTL_SEC=3600
+AUTH_SESSION_COOKIE_NAME=authSession
